<resources>
    <string name="app_name">Society</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you">YOU</string>
    <string name="welcome_to">Welcome to</string>
    <string name="submit">Submit</string>
    <string name="visitor_details">Visitor Details</string>
    <string name="otp">OTP</string>
    <string name="add_notes">Add Notes</string>
    <string name="number">1234567890</string>
    <string name="alphabet_number">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 </string>
    <string name="alphabet_space">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="alphabet">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="zone">Asia/Kolkata</string>
    <string name="search_visitor">Search Visitor</string>
</resources>