<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".Visitors.AddVisitor">

<!--    <include layout="@layout/custom_actionbar_layout" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome_toTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="@string/welcome_to"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="#555555"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/youTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="@string/you"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            android:textColor="#555555"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_toTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/visitorMobileConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rounder_20dp_bg_white"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youTextView">

            <RelativeLayout
                android:id="@+id/visitortiltleRelativeLyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/login_joinus_bg_grey_rounded"
                android:padding="@dimen/_3sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/addvisitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_joinup_selected_whiterounded"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="VISTITOR DETAILS"
                    android:textColor="#555555"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/textImageLineatlyt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/visitortiltleRelativeLyt">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_weight="2"
                    android:lineHeight="@dimen/_30sdp"
                    android:text="Visitor's Phone Number0"
                    android:textColor="#555555"
                    android:textSize="@dimen/_17sdp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_weight="3"
                    android:src="@drawable/funny_3d_mobile_inhand"
                    android:textSize="@dimen/_17sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/visitormMbileLineatlyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="6"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textImageLineatlyt">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="2">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="#555555"
                        android:hint="Code" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobileNumberTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:hint="Enter your text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileNumberTextInputLayoutEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="#555555"
                      />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button
                android:id="@+id/submitNumberBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                app:layout_constraintTop_toBottomOf="@id/visitormMbileLineatlyt"
                android:layout_marginVertical="@dimen/_10sdp"
                android:backgroundTint="@color/black"
                android:paddingVertical="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="@dimen/_20sdp"
            android:paddingVertical="@dimen/_20sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:background="@drawable/border_rounder_20dp_bg_white"
            app:layout_constraintTop_toBottomOf="@+id/visitorMobileConstraintLayout">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/announcementTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Announcement"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/black"/>
            <com.google.android.material.textview.MaterialTextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="We Welcome to You. A Simple way to manage Visitors Entry. Happy Visiting"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal"
                android:layout_below="@+id/announcementTitleTextView"
                android:textColor="#828282"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>